--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
   },
   "homepage": "https://github.com/orindholt/JokeGenerator#readme",
   "devDependencies": {
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-concat": "^2.6.1",
     "gulp-sass": "^5.0.0",
+    "gulp-uglify": "^3.0.2",
     "sass": "^1.43.3"
   },
   "dependencies": {
